# ChessMP

./: CMakeLists.txt  Readme.md  client.cpp  game.cpp  game.hpp  gameClient.cpp  gameClient.hpp  main.cpp  piece.cpp  piece.hpp  resourceManager.hpp
include/: game.hpp  gameClient.hpp  gameServer.hpp  piece.hpp  pieceMethods.hpp  resourceManager.hpp
resources/: pieceTextures.json  textures.json
src/: client.cpp  game.cpp  gameClient.cpp  gameServer.cpp  piece.cpp  pieceMethods.cpp  server.cpp
